@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-14T08:09:00Z",
+  "timestamp" : "2022-07-15T00:37:39Z",
   "count_outdated" : 504,
   "uniques_outdated" : 94,
-  "count" : 561,
-  "uniques" : 108,
+  "count" : 564,
+  "uniques" : 109,
   "views" : [
     {
       "timestamp": "2022-07-01T00:00:00Z",
@@ -70,10 +70,10 @@
     },
     {
       "timestamp": "2022-07-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
