@@ -1,3 +1,10 @@
+2022-07-15T00:37:39Z:
+* notice: last 14d: unq all: 13 60
+* notice: prev accum: outdated-unq outdated-all / unq all: 94 504 / 108 561
+* notice: next accum: outdated-unq outdated-all / unq all: 94 504 / 109 564
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2022-07-14]
+
 2022-07-14T08:09:00Z:
 * notice: last 14d: unq all: 12 57
 * notice: prev accum: outdated-unq outdated-all / unq all: 94 504 / 107 560
